--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@koa/router": "^9.0.1",
 		"koa": "^2.12.1",
 		"koa-bodyparser": "^4.3.0",
+		"koa-gzip": "^0.1.0",
 		"mongoose": "^5.9.19"
 	}
 }
