--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"@koa/router": "^9.0.1",
+		"bcrypt": "^5.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"koa": "^2.12.1",
 		"koa-bodyparser": "^4.3.0",
 		"koa-gzip": "^0.1.0",
+		"koa-jwt": "^4.0.0",
 		"mongoose": "^5.9.19"
 	}
 }
